--- a/page3.html
+++ b/page3.html
@@ -355,7 +355,7 @@
                     Essentials of Entrepreneurship: Thinking & Action
                   </h3>
                 </div>
-                <div class="blog-author-and-date-wrapper">
+                <!--<div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
                       <img src="assets/img/t2.png" loading="lazy" alt=""
@@ -365,7 +365,7 @@
                     <div class="text-block _14-px">Shaik Waseem</div>
                   </div>
                   <div class="text-block _14-px">March, 2022</div>
-                </div>
+                </div>-->
               </div>
             </a>
           </div>
@@ -392,7 +392,7 @@
                   <h5>Entrepreneurial Operations: Key to Success</h5>
                 </div>
               </div>
-              <div class="blog-down">
+              <!--<div class="blog-down">
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
@@ -404,7 +404,7 @@
                   </div>
                   <div class="text-block _14-px">April, 2022</div>
                 </div>
-              </div>
+              </div>-->
             </a>
           </div>
           <div role="listitem" class="blog-collection-item w-dyn-item">
@@ -429,7 +429,7 @@
                   </h5>
                 </div>
               </div>
-              <div class="blog-down">
+              <!--<div class="blog-down">
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
@@ -441,7 +441,7 @@
                   </div>
                   <div class="text-block _14-px">April, 2022</div>
                 </div>
-              </div>
+              </div>-->
             </a>
           </div>
           <div role="listitem" class="blog-collection-item w-dyn-item">
@@ -464,7 +464,7 @@
                   <h5>Developing Innovative Ideas for New Companies</h5>
                 </div>
               </div>
-              <div class="blog-down">
+              <!--<div class="blog-down">
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
@@ -476,7 +476,7 @@
                   </div>
                   <div class="text-block _14-px">April, 2022</div>
                 </div>
-              </div>
+              </div>-->
             </a>
           </div>
           <div role="listitem" class="blog-collection-item w-dyn-item">
@@ -494,7 +494,7 @@
                   </h5>
                 </div>
               </div>
-              <div class="blog-down">
+              <!--<div class="blog-down">
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
@@ -506,7 +506,7 @@
                   </div>
                   <div class="text-block _14-px">April, 2022</div>
                 </div>
-              </div>
+              </div>-->
             </a>
           </div>
           <div role="listitem" class="blog-collection-item w-dyn-item">
@@ -530,7 +530,7 @@
                   </h5>
                 </div>
               </div>
-              <div class="blog-down">
+              <!--<div class="blog-down">
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
@@ -542,7 +542,7 @@
                   </div>
                   <div class="text-block _14-px">April, 2022</div>
                 </div>
-              </div>
+              </div>-->
             </a>
           </div>
           <div role="listitem" class="blog-collection-item w-dyn-item">
@@ -568,7 +568,7 @@
                   </h5>
                 </div>
               </div>
-              <div class="blog-down">
+              <!--<div class="blog-down">
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
@@ -580,7 +580,7 @@
                   </div>
                   <div class="text-block _14-px">April, 2022</div>
                 </div>
-              </div>
+              </div>-->
             </a>
           </div>
         </div>
@@ -600,7 +600,7 @@
                 <div class="footer-text">
                     <div class="text-block _16-px brown">Learn how to start a company, with help from one of India's most credible startup accelerator - One Up</div>
                 </div>
-                <a href="mailto:hello@website.com" class="footer-email w-inline-block">
+                <a href="mailto:info@startups.courses" class="footer-email w-inline-block">
                     <div class="footer-email-image"><img
                             src="https://assets.website-files.com/6067703d73e522c2abe4d13a/60677153af0a42f6ae20c77d_Vector-5.svg"
                             loading="lazy" alt="" class="image contain" /></div>
