--- a/about.html
+++ b/about.html
@@ -297,11 +297,8 @@
                 <div data-w-id="4f8a5770-464c-4776-312a-6bb643b3ceb1"
                     style="opacity:0;-webkit-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
                     class="about-1-hero-text">
-                    <div class="white">We&#x27;re a squad of startup-focused educators know how to develop viable
-                        startups. We&#x27;ve all experienced the chaos of startup guidance which determines the
-                        sustainability of a company at stake. We built One Up to address
-                        every single one of those problems in creation that a startup could seek - efficient network,
-                        operational stability, viablity & fundings.</div>
+                    <div class="white">We&#x27;re a squad of startup-focused creators at One Up democratizes learning and disseminates knowledge far and wide. By distilling complex subjects into approachable and accessible online courses, we help startups learn faster and more efficiently. Our educational guidance for entrepreneurship and agile methods are ment to brew entrepreneurial mindset amongst youngsters and netizens, on the road to the future of startup creation.
+                    </div>
                 </div>
             </div>
             <div data-w-id="7d8b05fa-e0a6-cdb7-5883-eaa96bb9f938"
