--- a/index.html
+++ b/index.html
@@ -298,8 +298,7 @@
                 <div data-w-id="46992f80-b50f-f422-f073-7c76f81fc066"
                     style="opacity:0;-webkit-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
                     class="home-1-text-wrapper">
-                    <div>One Up is an experienced and passionate group of entrepreneurs, developers, project managers
-                        and investors propelling towards creating outnumbered potential startups.
+                    <div>Learn to think like an entrepreneur and to solve real-world problems by creating something new. Get first-hand knowledge from founders on how to start your own business, kickstart a venture inside an organization, or to simply understand and discuss the topic.
                     </div>
                 </div><a data-w-id="07f270f5-d6c0-376e-729e-ddefe3ee497f"
                     style="opacity:0;-webkit-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
@@ -445,8 +444,7 @@
                 <div class="home-1-people-line"></div>
                 <div class="home-1-people-feedback-div">
                     <div class="home-1-feedback-text-wrapper">
-                        <div class="text-block _16-px brown">&quot;Learn how to start a company, with help from the
-                            Indias's most credible startup accelerator.&quot;</div>
+                        <div class="text-block _16-px brown">&quot;Learn to think like an entrepreneur and to solve real-world problems by creating something new.&quot;</div>
                     </div>
                     <div class="home-1-people-feedback-name">
                         <div class="text-block _16-px brown medium">-Master Subhajit Ghosh, Co-Founder, One Up</div>
@@ -517,7 +515,7 @@
                 <div data-w-id="8972d5fb-1721-97b3-c588-ca60e21c9899"
                     style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                     class="home-1-cta-card-image"><img
-                        src="assets/img/leader-modified.png"
+                        src="assets/img/logo-white-modified.png"
                         loading="lazy" alt="" class="image contain">
                     <div class="home-1-cta-checkmark"><img
                             src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606771539c3b85928f76b77a_Group%20898.svg"
@@ -661,7 +659,7 @@
                     class="home-1-testimonial-item margin-bottom-50-px">
                     <div class="home-1-testimonial-text-wrapper">
                         <div class="text-block _24-px">&quot;I can&#x27;t believe how much easier One Up made formation
-                            of startups. Because of One Up's Foundational Course it was no surprise to my addition that I
+                            of startups. Because of One Up's Fundational Course it was no surprise to my addition that I
                             was much welcomed in the corporate world.&quot;</div>
                     </div>
                     <div class="home-1-testimonial-person">
@@ -929,9 +927,9 @@
                 <div class="footer-main-column"><a href="/" class="footer-logo w-inline-block"><img
                             src="assets/img/logo-white.jpeg" loading="lazy" alt="" class="image contain" /></a>
                     <div class="footer-text">
-                        <div class="text-block _16-px brown">Learn how to start a company, with help from one of India's most credible startup accelerator - One Up</div>
+                        <div class="text-block _16-px brown">Learn the fundamentals of startup entrepreneurship, company building, and how to create new products with real-life examples from successful entrepreneurs.</div>
                     </div>
-                    <a href="mailto:hello@website.com" class="footer-email w-inline-block">
+                    <a href="mailto:info@startups.courses" class="footer-email w-inline-block">
                         <div class="footer-email-image"><img
                                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/60677153af0a42f6ae20c77d_Vector-5.svg"
                                 loading="lazy" alt="" class="image contain" /></div>
