--- a/page3.html
+++ b/page3.html
@@ -598,7 +598,7 @@
             <div class="footer-main-column"><a href="/" class="footer-logo w-inline-block"><img
                         src="assets/img/logo-white.jpeg" loading="lazy" alt="" class="image contain" /></a>
                 <div class="footer-text">
-                    <div class="text-block _16-px brown">Learn how to start a company, with help from one of India's most credible startup accelerator - One Up</div>
+                    <div class="text-block _16-px brown">Learn the fundamentals of startup entrepreneurship, company building, and how to create new products with real-life examples from successful entrepreneurs.</div>
                 </div>
                 <a href="mailto:info@startups.courses" class="footer-email w-inline-block">
                     <div class="footer-email-image"><img
