--- a/about.html
+++ b/about.html
@@ -354,7 +354,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="team-grid-right">
+                <!--<div class="team-grid-right">
                     <div class="team-grid-item"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                         <div class="team-person-image"><img src="assets/img/t3.png" loading="lazy" alt="" class="image">
@@ -364,14 +364,14 @@
                                 <h4><strong>Dinnesh Prabhakaran</strong></h4>
                             </div>
                             <div class="team-designation-wrapper">
-                                <div class="text-block medium"><strong><!--Co-Founder &amp;--> CMO</strong></div>
+                                <div class="text-block medium"><strong><!--Co-Founder &amp;--> <!--CMO</strong></div>
                             </div>
                             <div class="team-about-wrapper">
                                 <div class="text-block _16-px brown">An Engineer, creator of electronic water management
                                     systems startup - AQUA. Digital Marketing expert scaling OneUp.</div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="team-grid-item"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                         <div class="team-person-image"><img src="assets/img/t4.png" loading="lazy"
@@ -617,13 +617,13 @@
                             <div class="about-1-office-heading-wrapper">
                                 <div class="text-block green">Head Office</div>
                             </div>
-                            <h4 class="h4-36px-height"> Arekere, Bengaluru, Karnataka - 560076</h4>
+                            <h4 class="h4-36px-height">Maximus, Sodepur, Kolkata - 700115</h4>
                         </div>
                         <div class="about-1-office-item middle">
                             <div class="about-1-office-heading-wrapper">
                                 <div class="text-block green">Regional Office</div>
                             </div>
-                            <h4 class="h4-36px-height">Maximus, Sodepur, Kolkata - 700115</h4>
+                            <h4 class="h4-36px-height">Hyderabad West, Telangana - 500059</h4>
                         </div>
                         <div class="about-1-office-item">
                             <div class="about-1-office-heading-wrapper">
