--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
     <div class="home-1-people-section reverse-section wf-section">
         <div class="wrapper home-1-people-wrapper reverse">
             <div data-w-id="fbee8af8-6f61-4f96-d51b-eecde0f7551b" style="opacity:0" class="home-1-people-image"><img
-                    src="assets/img/entrepreneur.webp" loading="lazy"
+                    src="assets/img/startup.gif" loading="lazy"
                     sizes="(max-width: 479px) 90vw, (max-width: 767px) 72vw, (max-width: 991px) 64vw, (max-width: 1439px) 41vw, 556.796875px"
                     alt="Explore" class="image scale-animation" /></div>
             <div class="home-1-people-right">
