--- a/index.html
+++ b/index.html
@@ -512,8 +512,8 @@
     <div class="home-1-cta-section wf-section">
         <div class="wrapper home-1-cta-wrapper">
             <div data-w-id="c63b5e29-4ec5-fc9d-8f8f-39d40f33f75c" style="opacity:0" class="home-1-cta-image"><img
-                    src="assets/img/badman.jpeg" loading="lazy" alt="" class="image scale-animation" />
-                <div data-w-id="8972d5fb-1721-97b3-c588-ca60e21c9899"
+                    src="assets/img/startup-oppourtunities.png" loading="lazy" alt="" class="image scale-animation" />
+                <!--<div data-w-id="8972d5fb-1721-97b3-c588-ca60e21c9899"
                     style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                     class="home-1-cta-card-image"><img
                         src="assets/img/leader-modified.png"
@@ -521,7 +521,7 @@
                     <div class="home-1-cta-checkmark"><img
                             src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606771539c3b85928f76b77a_Group%20898.svg"
                             loading="lazy" alt="" class="image contain"></div>
-                </div>
+                </div>-->
             </div>
             <div class="home-1-cta-right">
                 <div data-w-id="cceb99f3-7455-b2e4-2c92-da5bb60037d1" style="opacity:0" class="home-1-heading-wrapper">
