--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             </div>
             <div data-w-id="4f261fd6-2e8e-191e-3933-b84341a5704f"
                 style="opacity:0;-webkit-transform:translate3d(20%, null, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(20%, null, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(20%, null, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(20%, null, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
-                class="hero-1-image-wrapper"><img src="assets/img/home.gif" loading="lazy" alt="homepage intro image"
+                class="hero-1-image-wrapper"><img src="assets/img/startup.webp" loading="lazy" alt="homepage intro image"
                     class="image" /></div>
         </div>
     </div>
@@ -345,7 +345,7 @@
                         <div class="learn-more-link-text">Learn more</div>
                         <div class="learn-more-link-line black"></div>
                     </a>
-                    <div class="email-table-image"><img src="assets/img/visco.gif" loading="lazy" alt=""
+                    <div class="email-table-image"><img src="assets/img/tinkering.webp" loading="lazy" alt=""
                             class="image" /></div>
                 </div>
                 <div data-w-id="80263c41-d056-3036-5267-42255afcb3ac" style="opacity:0"
@@ -365,7 +365,7 @@
                         <div class="learn-more-link-text">Learn more</div>
                         <div class="learn-more-link-line black"></div>
                     </a>
-                    <div class="email-table-image"><img src="assets/img/step_up.gif" loading="lazy"
+                    <div class="email-table-image"><img src="assets/img/inflection.webp" loading="lazy"
                             sizes="(max-width: 479px) 76vw, (max-width: 767px) 60vw, (max-width: 991px) 290px, (max-width: 1439px) 18vw, 250.5625px"
                             alt="" class="image" /></div>
                 </div>
@@ -385,7 +385,7 @@
                         <div class="learn-more-link-text">Learn more</div>
                         <div class="learn-more-link-line black"></div>
                     </a>
-                    <div class="email-table-image"><img src="assets/img/surging.gif" loading="lazy" alt=""
+                    <div class="email-table-image"><img src="assets/img/surging.webp" loading="lazy" alt=""
                             class="image" /></div>
                 </div>
             </div>
@@ -723,7 +723,7 @@
     <div class="home-1-integrate-section wf-section">
         <div class="wrapper integrate-wrapper">
             <div data-w-id="476e8bd1-7aaa-f19e-8907-139a6929342a" style="opacity:0"
-                class="home-1-integrate-image-wrapper"><img src="assets/img/business_vision_wow.png" loading="lazy"
+                class="home-1-integrate-image-wrapper"><img src="assets/img/roar.webp" loading="lazy"
                     sizes="(max-width: 479px) 90vw, (max-width: 767px) 81vw, (max-width: 991px) 68vw, (max-width: 1439px) 43vw, 550px"
                     alt="Business Vision" class="image" /></div>
             <div class="home-1-integrate-right">
@@ -917,7 +917,7 @@
                 });
             </script>
             <div data-w-id="bc79b166-b1db-2c65-5611-92113cde319d" class="home-1-subscribe-image"><img
-                    src="assets/img/leader-modified.png" loading="lazy"
+                    src="assets/img/home.webp" loading="lazy"
                     sizes="(max-width: 767px) 90vw, (max-width: 991px) 68vw, (max-width: 1439px) 60vw, 800px"
                     alt="Subscription Image" class="image scale-animation" /></div>
         </div>
