--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
                     .catch(error => $("#form-alerts").html("<div class='alert alert-danger'>Oops! Something went wrong while submitting the form.</div>"))
                 });
             </script>
-            <div data-w-id="bc79b166-b1db-2c65-5611-92113cde319d" class="home-1-subscribe-image"><img
+            <div data-w-id="#" class="hero-1-image-wrapper"><img
                     src="assets/img/home.webp" loading="lazy"
                     sizes="(max-width: 767px) 90vw, (max-width: 991px) 68vw, (max-width: 1439px) 60vw, 800px"
                     alt="Subscription Image" class="image scale-animation" /></div>
