--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
                 });
             </script>
             <div data-w-id="#" class="hero-1-image-wrapper"><img
-                    src="assets/img/home.webp" loading="lazy"
+                    src="assets/img/unity.png" loading="lazy"
                     sizes="(max-width: 767px) 90vw, (max-width: 991px) 68vw, (max-width: 1439px) 60vw, 800px"
                     alt="Subscription Image" class="image scale-animation" /></div>
         </div>
