--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         <div class="wrapper home-1-features">
             <div data-w-id="8c12539a-ad23-46f7-7e8d-95957ce4c913" style="opacity:0" class="home-1-features-item">
                 <div class="home-1-features-icon"><img
-                        src="https://assets.website-files.com/6067703d73e522c2abe4d13a/60677153b9a18511d5dae1b9_Group%20878.svg"
+                        src="https://img.icons8.com/external-phatplus-solid-phatplus/64/000000/external-timing-drone-phatplus-solid-phatplus.png"
                         loading="lazy" alt="" /></div>
                 <div class="home-1-features-heading-wrapper">
                     <h4><strong>Flexible Timing</strong></h4>
@@ -476,7 +476,7 @@
             </div>
             <div data-w-id="4fa12907-8a0d-eef3-d52c-a6629a44ae4d" style="opacity:0" class="home-1-features-item">
                 <div class="home-1-features-icon"><img
-                        src="https://assets.website-files.com/6067703d73e522c2abe4d13a/60677153f049161c8425a4e6_Group%20879.svg"
+                        src="https://img.icons8.com/external-others-zufarizal-robiyanto/64/000000/external-business-back-to-office-others-zufarizal-robiyanto-10.png"
                         loading="lazy" alt="" /></div>
                 <div class="home-1-features-heading-wrapper">
                     <h4><strong>Business Management</strong></h4>
@@ -492,7 +492,7 @@
             </div>
             <div data-w-id="ac3db593-4f1e-b2ed-2b4f-7f6bfdea57c3" style="opacity:0" class="home-1-features-item">
                 <div class="home-1-features-icon"><img
-                        src="https://assets.website-files.com/6067703d73e522c2abe4d13a/60677153a2207a3f55fcb4e1_Group%20894.svg"
+                        src="https://img.icons8.com/external-others-zufarizal-robiyanto/64/000000/external-network-back-to-office-others-zufarizal-robiyanto.png"
                         loading="lazy" alt="" /></div>
                 <div class="home-1-features-heading-wrapper">
                     <h4><strong>Connect</strong></h4>
