--- a/about.html
+++ b/about.html
@@ -326,7 +326,7 @@
                                 <h4><strong>Master Subhajit Ghosh</strong></h4>
                             </div>
                             <div class="team-designation-wrapper">
-                                <div class="text-block medium">Co-Founder &amp; CTO</div>
+                                <div class="text-block medium">Founder &amp; CEO</div>
                             </div>
                             <div class="team-about-wrapper">
                                 <div class="text-block _16-px brown">A Cybersecurity enthusiast, a former model, an
