--- a/workshop.html
+++ b/workshop.html
@@ -314,7 +314,7 @@
                     Workshop on Design Thinking & Innovation
                   </h3>
                 </div>
-                <div class="blog-author-and-date-wrapper">
+                <!--<div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
                       <img src="assets/img/t2.png" loading="lazy" alt=""
@@ -324,7 +324,7 @@
                     <div class="text-block _14-px">Shaik Waseem</div>
                   </div>
                   <div class="text-block _14-px">September, 2022</div>
-                </div>
+                </div>-->
               </div>
             </a>
           </div>
@@ -353,7 +353,7 @@
                   </h5>
                 </div>
               </div>
-              <div class="blog-down">
+              <!--<div class="blog-down">
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
@@ -364,7 +364,7 @@
                     <div class="text-block _14-px">Dinnesh Prabhakaran</div>
                   </div>
                   <div class="text-block _14-px">March, 2022</div>
-                </div>
+                </div>-->
               </div>
             </a>
           </div>
@@ -383,7 +383,7 @@
                   <h5>Workshop on Entrepreneurship skill, atitude & Behaviour Development</h5>
                 </div>
               </div>
-              <div class="blog-down">
+              <!--<div class="blog-down">
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
@@ -394,7 +394,7 @@
                     <div class="text-block _14-px">Master Subhajit Ghosh</div>
                   </div>
                   <div class="text-block _14-px">February, 2022</div>
-                </div>
+                </div>-->
               </div>
             </a>
           </div>
@@ -415,7 +415,7 @@
                   </h5>
                 </div>
               </div>
-              <div class="blog-down">
+              <!--<div class="blog-down">
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
@@ -426,7 +426,7 @@
                     <div class="text-block _14-px">Dinnesh Prabhakaran</div>
                   </div>
                   <div class="text-block _14-px">April, 2022</div>
-                </div>
+                </div>-->
               </div>
             </a>
           </div>
