--- a/workshop.html
+++ b/workshop.html
@@ -353,8 +353,8 @@
                   </h5>
                 </div>
               </div>
-              <!--<div class="blog-down">
-                <div class="blog-author-and-date-wrapper">
+              <div class="blog-down">
+                <!--<div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
                       <img src="assets/img/t3.png" loading="lazy" alt=""
@@ -383,8 +383,8 @@
                   <h5>Workshop on Entrepreneurship skill, atitude & Behaviour Development</h5>
                 </div>
               </div>
-              <!--<div class="blog-down">
-                <div class="blog-author-and-date-wrapper">
+              <div class="blog-down">
+                <!--<div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
                       <img src="assets/img/t1.png" loading="lazy" alt=""
@@ -415,8 +415,8 @@
                   </h5>
                 </div>
               </div>
-              <!--<div class="blog-down">
-                <div class="blog-author-and-date-wrapper">
+              <div class="blog-down">
+                <!--<div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
                       <img src="assets/img/t3.png" loading="lazy" alt=""
