--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     }
 </style>
 
-<body>
+<body oncontextmenu="return false">
     <div class="about-1-hero-section wf-section">
         <div class="main-navigations-container">
             <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease"
@@ -173,12 +173,12 @@
                                     </div>
                                 </nav>
                             </div><a href="https://startups.courses/about.html" class="nav-link white w-nav-link">About</a>
-                            <a href="https://startups.courses/contact.html" class="nav-link white w-nav-link">Contact</a>
+                            <!--<a href="https://startups.courses/contact.html" class="nav-link white w-nav-link">Contact</a>-->
                         </nav>
                     </div>
-                    <div class="navigation-right"><a href="https://startups.courses/login.html" target="_blank"
-                            class="nav-link white w-nav-link">Log In</a><a href="https://startups.courses/register.html" target="_blank"
-                            class="button _12-px-padding nav-button button-hover-white w-button">Register</a></div>
+                    <div class="navigation-right"><!--<a href="https://startups.courses/login.html" target="_blank"
+                            class="nav-link white w-nav-link">Log In</a>--><a href="https://startups.courses/contact.html" target="_blank"
+                            class="button _12-px-padding nav-button button-hover-white w-button">Contact</a></div>
                 </div>
             </div>
             <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease"
@@ -719,8 +719,8 @@
                         <div class="footer-column-heading-wrapper">
                             <h5>Other Pages</h5>
                         </div><a href="workshop.html" class="footer-link">Workshop</a><a href="contact.html"
-                            class="footer-link">Contact</a><a href="password-reset.html" class="footer-link">Password
-                            Reset</a>
+                            class="footer-link">Contact</a><a href="mentorship.html" class="footer-link">Mentorship
+                            </a>
                     </div>
                     <div class="footer-column">
                         <div class="footer-column-heading-wrapper">
