--- a/changelog.html
+++ b/changelog.html
@@ -41,7 +41,7 @@
     }
 </style>
 
-<body>
+<body class="nocopy">
     <div class="utility-page-wrap">
         <div class="utility-page-content w-form">
             <h2 class="_404-text">Ver 1.0</h2>
