--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     }
 </style>
 
-<body oncontextmenu="return false">
+<body class="nocopy" oncontextmenu="return false">
     <div class="about-1-hero-section wf-section">
         <div class="main-navigations-container">
             <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease"
