--- a/404.html
+++ b/404.html
@@ -38,7 +38,7 @@
 
 </head>
 
-<body>
+<body class="nocopy" oncontextmenu="return false">
 
     <!-- Start Error Page -->
     <div class="error-page">
