--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
   <link href="assets/img/favicon.ico" rel="apple-touch-icon" />
 </head>
 
-<body>
+<body oncontextmenu="return false" class"nocopy">
   <div class="contact-hero-section wf-section">
     <div class="main-navigations-container">
       <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
