--- a/courses.html
+++ b/courses.html
@@ -80,7 +80,7 @@
       rel="apple-touch-icon"
     />
   </head>
-  <body>
+  <body oncontextmenu="return false">
     <div class="main-navigations-container">
       <div class="main-navigations-container">
           <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease"
@@ -199,11 +199,11 @@
                                   </div>
                               </nav>
                           </div><a href="about.html" class="nav-link w-nav-link">About</a>
-                          <a href="contact.html" class="nav-link w-nav-link">Contact</a>
+                          <!--<a href="contact.html" class="nav-link w-nav-link">Contact</a>-->
                       </nav>
                   </div>
-                  <div class="navigation-right"><a href="login.html" class="nav-link w-nav-link">Log In</a>
-                      <a href="register.html" class="button _12-px-padding nav-button w-button">Register</a></div>
+                  <div class="navigation-right"><!--<a href="login.html" class="nav-link w-nav-link">Log In</a>-->
+                      <a href="contact.html" class="button _12-px-padding nav-button w-button">Contact</a></div>
               </div>
           </div>
           <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease"
@@ -291,11 +291,11 @@
                                       </div>
                                   </a>
                               </nav>
-                          </div><a href="about.html" class="mobile-nav-link w-nav-link">About</a><a href="contact.html"
+                          </div><a href="about.html" class="mobile-nav-link w-nav-link">About</a><!--<a href="contact.html"
                               class="mobile-nav-link w-nav-link">Contact</a><a href="login.html"
-                              target="_blank" class="mobile-nav-link w-nav-link">Log In</a><a
-                              href="register.html" target="_blank"
-                              class="button _12-px-padding nav-button w-button">Register</a>
+                              target="_blank" class="mobile-nav-link w-nav-link">Log In</a>--><a
+                              href="contact.html" target="_blank"
+                              class="button _12-px-padding nav-button w-button">Contact</a>
                       </div>
                   </nav>
                   <div class="menu-button-mob w-nav-button">
