--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <link href="assets/img/favicon.ico" rel="apple-touch-icon" />
 </head>
 
-<body>
+<body oncontextmenu="return false">
     <div class="main-navigations-container">
         <div class="main-navigations-container">
             <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease"
