--- a/404.html
+++ b/404.html
@@ -24,11 +24,11 @@
     <!--  Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <!-- Font Ukie -->
-    <link type="text/css" media="all" href="assets/css/font-ukie.css" rel="stylesheet">
+    <link type="text/css" media="all" href="https://www.startups.courses/assets/css/font-ukie.css" rel="stylesheet">
     <!-- include the bootstrap stylesheet -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://www.startups.courses/assets/css/bootstrap.min.css">
     <!-- include the site stylesheet -->
-    <link rel="stylesheet" href="assets/css/styles-astronaut.css">
+    <link rel="stylesheet" href="https://www.startups.courses/assets/css/styles-astronaut.css">
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="144x144" href="//startups.courses/assets/img/favicon.svg">
     <link rel="apple-touch-icon" sizes="114x114" href="//startups.courses/assets/img/favicon.png">
