--- a/about.html
+++ b/about.html
@@ -607,7 +607,7 @@
                         data-widget-style="roadmap" data-widget-zoom="12" class="about-1-map w-widget w-widget-map">-->
                     <div class="about-1-map w-widget w-widget-map">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15557.442970247228!2d77.6035522!3d12.8845097!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7d301831b6137e9!2sOne%20Up%20Consultancy!5e0!3m2!1sen!2sin!4v1644086805816!5m2!1sen!2sin"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7208.803947061153!2d88.37534089495576!3d22.708852069408547!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c764dbb0195%3A0x27e6a6513c989376!2sMerlin%20Maximus!5e0!3m2!1sen!2sin!4v1648367349903!5m2!1sen!2sin" referrerpolicy="no-referrer-when-downgrade"
                             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
