--- a/about.html
+++ b/about.html
@@ -275,10 +275,10 @@
                                         </div>
                                     </a>
                                 </nav>
-                            </div><a href="https://startups.courses/about.html" class="mobile-nav-link w-nav-link">About</a><a
+                            </div><a href="https://startups.courses/about.html" class="mobile-nav-link w-nav-link">About</a><!--<a
                                 href="https://startups.courses/contact.html" class="mobile-nav-link w-nav-link">Contact</a><a href="https://startups.courses/login.html"
-                                target="_blank" class="mobile-nav-link w-nav-link">Log In</a><a href="https://startups.courses/register.html"
-                                target="_blank" class="button _12-px-padding nav-button w-button">Register</a>
+                                target="_blank" class="mobile-nav-link w-nav-link">Log In</a>--><a href="https://startups.courses/contact.html"
+                                target="_blank" class="button _12-px-padding nav-button w-button">Contact</a>
                         </div>
                     </nav>
                     <div class="menu-button-mob white-links-menu w-nav-button">
@@ -607,7 +607,7 @@
                         data-widget-style="roadmap" data-widget-zoom="12" class="about-1-map w-widget w-widget-map">-->
                     <div class="about-1-map w-widget w-widget-map">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7208.803947061153!2d88.37534089495576!3d22.708852069408547!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c764dbb0195%3A0x27e6a6513c989376!2sMerlin%20Maximus!5e0!3m2!1sen!2sin!4v1648367349903!5m2!1sen!2sin" referrerpolicy="no-referrer-when-downgrade"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7208.803947061153!2d88.37534089495576!3d22.708852069408547!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c764dbb0195%3A0x27e6a6513c989376!2sMerlin%20Maximus!5e0!3m2!1sen!2sin!4v1648367349903!5m2!1sen!2sin"
                             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
